Started to implement profile, changed new-question button on lg, md, and small to primary

--- a/public/partials/navs/top_qa.html
+++ b/public/partials/navs/top_qa.html
@@ -54,7 +54,7 @@
             </li>
         </ul>
         <a type="button"
-           class="btn btn-default btn-lg navbar-btn pull-right"
+           class="btn btn-primary btn-lg navbar-btn pull-right"
            href="#myModal"
            target="_self"
            role="button"
