--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -23,7 +23,7 @@
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-58209445-1', 'auto');
-        ga('send', 'pageview');
+        //        ga('send', 'pageview');
 
     </script>
 
@@ -116,6 +116,12 @@
         src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-sanitize.min.js"></script>
 <script type="text/javascript"
         src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
+
+<!--angular analytics-->
+<script type="text/javascript"
+        src="/bower_components/angulartics-master/dist/angulartics.min.js"></script>
+<script type="text/javascript"
+        src="/bower_components/angulartics-master/dist/angulartics-ga.min.js"></script>
 
 
 <!-- Bootstrap.js -->
