--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -118,10 +118,8 @@
         src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
 
 <!--angular analytics-->
-<script type="text/javascript"
-        src="/bower_components/angulartics/dist/angulartics.min.js"></script>
-<script type="text/javascript"
-        src="/bower_components/angulartics/dist/angulartics-ga.min.js"></script>
+<script src="/bower_components/angulartics/dist/angulartics.min.js"></script>
+<script src="/bower_components/angulartics/dist/angulartics-ga.min.js"></script>
 
 
 <!-- Bootstrap.js -->
