switched to angulartics cdn

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -118,8 +118,8 @@
         src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
 
 <!--angular analytics-->
-<script src="/bower_components/angulartics/dist/angulartics.min.js"></script>
-<script src="/bower_components/angulartics/dist/angulartics-ga.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angulartics/0.17.2/angulartics.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angulartics/0.17.2/angulartics-ga.min.js"></script>
 
 
 <!-- Bootstrap.js -->
