--- a/public/partials/views/trending.html
+++ b/public/partials/views/trending.html
@@ -3,7 +3,7 @@
      class="animated fadeIn">
 
     <div ng-if="alerts.newQuestionAlert.display == true"
-         class="animated fadeIn">
+         class="animated fadeIn" id="trending-newQ-alert">
         <a ng-href="#/"
            ng-click="closeAlert('newQuestionAlert')">
             <alert ng-model="alerts.newQuestionAlert"
