Changed from email to feedback on bottom bar login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -133,8 +133,7 @@
 
         <div class="pull-right">
             <a class="navbar-btn btn btn-warning btn-xs hidden-xs">Status: Development</a>
-            <a href="#myModal" role="button" class="navbar-btn btn btn-info btn-xs" data-toggle="modal">Shoot Me an
-                Email</a>
+            <a href="#myModal" role="button" class="navbar-btn btn btn-info btn-xs" data-toggle="modal">Feedback</a>
         </div>
     </div>
 </div>
