--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -5,7 +5,7 @@
 
 /*defaults*/
 body {
-    padding-top: 50px;
+    padding-top: 70px;
     padding-bottom: 70px;
     font-size: 12px;
 }
@@ -14,6 +14,10 @@ body {
 #mobile-nav-header {
     height: 30px;
     margin-bottom: 0;
+}
+
+#brand-name {
+    font-size: 15px;
 }
 
 ul > li.col-xs-4 {
