Removed bottom bar on chat.ejs to increase view space

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -89,9 +89,9 @@
 
 
 <!--start of bottom nav-->
-<div class="ng-cloak">
-    <div bottom-qa-nav></div>
-</div>
+<!--<div class="ng-cloak">-->
+    <!--<div bottom-qa-nav></div>-->
+<!--</div>-->
 <!--end of bottom nav-->
 
 
