Blue info background for badges, fixed repetitive upvote updates when using multiple devices

--- a/public/partials/trending_summary.html
+++ b/public/partials/trending_summary.html
@@ -13,7 +13,7 @@
             ng-class="[
             questionReference[eachTop.questionIndex].questionClass
             ]">
-            <span class="badge voteNumber">
+            <span class="badge alert-info voteNumber">
                 {{eachTop.votes}}
             </span>
             <a ng-href="#/fullQuestion/{{eachTop.questionIndex}}/">
