--- a/public/partials/views/trending.html
+++ b/public/partials/views/trending.html
@@ -20,7 +20,7 @@
             ng-repeat="eachTop in topVotedQuestions"
             ng-class="[questionReference[eachTop.questionIndex].questionClass]"
             ng-disabled="questionReference[eachTop.questionIndex].ifDisabled">
-            <span class="badge voteNumber">{{eachTop.votes}}</span>
+            <span class="badge alert-info voteNumber">{{eachTop.votes}}</span>
             <h4 class="text-outputs question-header">
                 <a ng-href="#/fullQuestion/{{eachTop.questionIndex}}/"
                    class="question-heading">
