--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -30,8 +30,8 @@
     <!-- loads bootstrap css -->
     <!--<link rel="stylesheet" href="/public/css/bootstrap/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="////maxcdn.bootstrapcdn.com/bootswatch/3.3.2/paper/bootstrap.min.css">
-    <link rel="stylesheet"
-          href="/public/css/bootstrap/css/bootstrap-theme.min.css">
+    <!--<link rel="stylesheet"-->
+          <!--href="/public/css/bootstrap/css/bootstrap-theme.min.css">-->
 
     <!--animate.css-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css"/>
