--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,8 +30,8 @@
     <!-- loads bootstrap css -->
     <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="////maxcdn.bootstrapcdn.com/bootswatch/3.3.2/paper/bootstrap.min.css">
-    <link rel="stylesheet"
-          href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <!--<link rel="stylesheet"-->
+          <!--href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap-theme.min.css">-->
 
     <!--loads font awesome-->
     <link rel="stylesheet"
@@ -134,7 +134,7 @@
 
         <div class="pull-right">
             <a class="navbar-btn btn btn-warning btn-xs hidden-xs">Status: Development</a>
-            <a href="#myModal" role="button" class="navbar-btn btn btn-info btn-xs" data-toggle="modal">Feedback</a>
+            <a href="#myModal" role="button" class="navbar-btn btn btn-primary btn-xs" data-toggle="modal">Feedback</a>
         </div>
     </div>
 </div>
