--- a/public/partials/questionFeed.html
+++ b/public/partials/questionFeed.html
@@ -16,7 +16,8 @@
     </form>
 
     <div ng-if="alerts.newQuestionAlert.display == true">
-        <a ng-if="pageNo == 1">
+        <a ng-if="pageNo == 1"
+           class="alert-new-post-sentence">
             <alert class="animated fadeIn"
                    ng-model="alerts.newQuestionAlert"
                    type="{{alerts.newQuestionAlert.type}}"
@@ -24,7 +25,8 @@
                 {{alerts.newQuestionAlert.num}} new post(s) available. Click to show
             </alert>
         </a>
-        <a ng-if="pageNo != 1">
+        <a ng-if="pageNo != 1"
+           class="alert-new-post-sentence">
             <alert class="animated fadeIn"
                    ng-model="alerts.newQuestionAlert"
                    type="{{alerts.newQuestionAlert.type}}"
