--- a/public/partials/views/trending.html
+++ b/public/partials/views/trending.html
@@ -5,7 +5,8 @@
     <div ng-if="alerts.newQuestionAlert.display == true"
          class="animated fadeIn" id="trending-newQ-alert">
         <a ng-href="#/"
-           ng-click="closeAlert('newQuestionAlert')">
+           ng-click="closeAlert('newQuestionAlert')"
+           class="alert-new-post-sentence">
             <alert ng-model="alerts.newQuestionAlert"
                    type="{{alerts.newQuestionAlert.type}}">
                 {{alerts.newQuestionAlert.num}} new post(s) available. Click to show
