Changed quote on login screen jumbotron

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -29,7 +29,7 @@
 
     <!-- loads bootstrap css -->
     <!--<link rel="stylesheet" href="/public/css/bootstrap/css/bootstrap.min.css">-->
-    <link rel="stylesheet" href="////maxcdn.bootstrapcdn.com/bootswatch/3.3.2/paper/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.2/paper/bootstrap.min.css">
     <!--<link rel="stylesheet"-->
           <!--href="/public/css/bootstrap/css/bootstrap-theme.min.css">-->
 
