--- a/views/login1.ejs
+++ b/views/login1.ejs
@@ -96,8 +96,7 @@
 
         <h1>HARVARD CLASS</h1>
 
-        <p>"We have enriched the way people ask questions in class. Harvard Class was built with one goal only: To
-            bring a more dynamic Q/A classroom environment between the professor and students"</p>
+        <p>"We are committed to improving communication between professors and students, encouraging collaboration, and fostering a dynamic classroom experience."</p>
 
         <a class="btn btn-default"><i class="fa fa-info-circle"></i> About Us</a>
         <a class="btn btn-default"><i class="fa fa-question"></i> Help</a>
