Changed image background on login jumbotron and added emphasis/bold

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -11,7 +11,7 @@ body {
 }
 
 .jumbotron {
-    background-image: url(/public/imgs/widener1.jpg);
+    background-image: url(/public/imgs/server-1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
