--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,7 +31,7 @@
     <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="////maxcdn.bootstrapcdn.com/bootswatch/3.3.2/paper/bootstrap.min.css">
     <!--<link rel="stylesheet"-->
-          <!--href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap-theme.min.css">-->
+    <!--href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap-theme.min.css">-->
 
     <!--loads font awesome-->
     <link rel="stylesheet"
@@ -89,9 +89,11 @@
     <!--the text-center class centers everything in it-->
     <div class="jumbotron text-center">
 
-        <h1>HARVARD CLASS</h1>
+        <h1><strong>HARVARD CLASS</strong></h1>
 
-        <p>"We are committed to improving communication between professors and students, encouraging collaboration, and fostering a dynamic classroom experience."</p>
+        <p><strong>"We are committed to improving communication between professors and students, encouraging
+                collaboration, and fostering a dynamic classroom experience."</strong>
+        </p>
 
         <a class="btn btn-default"><i class="fa fa-info-circle"></i> About Us</a>
         <a class="btn btn-default"><i class="fa fa-question"></i> Help</a>
