--- a/views/loginNew.ejs
+++ b/views/loginNew.ejs
@@ -89,9 +89,12 @@
     <!--the text-center class centers everything in it-->
     <div class="jumbotron text-center">
 
-        <h1>HARVARD CLASS</h1>
+        <h1><strong>HARVARD CLASS</strong></h1>
 
-        <p>"We are committed to improving communication between professors and students, encouraging collaboration, and fostering a dynamic classroom experience."</p>
+        <p><strong>"We are committed to improving communication between professors and students, encouraging
+                collaboration, and
+                fostering a dynamic classroom experience."</strong>
+        </p>
 
         <a class="btn btn-default"><i class="fa fa-info-circle"></i> About Us</a>
         <a class="btn btn-default"><i class="fa fa-question"></i> Help</a>
