Changed colouring on login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -89,9 +89,10 @@
     <!--the text-center class centers everything in it-->
     <div class="jumbotron text-center">
 
-        <h1><strong>HARVARD CLASS</strong></h1>
+        <h1 class="jumbo-header"><strong>HARVARD CLASS</strong></h1>
 
-        <p><strong>"We are committed to improving communication between professors and students, encouraging
+        <p class="jumbo-quote"><strong>"We are committed to improving communication between professors and students,
+                encouraging
                 collaboration, and fostering a dynamic classroom experience."</strong>
         </p>
 
