--- a/public/css/login.css
+++ b/public/css/login.css
@@ -14,6 +14,14 @@ body {
     background-image: url(/public/imgs/server-1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    color: white;
+}
+
+.jumbo-quote {
+    color: #ffffff;
+    text-shadow: black 0.3em 0.3em 0.3em;
+}
+
+h1.jumbo-header {
+    color: #737373;
     text-shadow: black 0.3em 0.3em 0.3em;
 }
