Minor changes in cdn

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="qaApp" ng-controller="HeadCtrl">
+<html lang="en" ng-app="qaApp" ng-controller="HeadCtrl">
 <head>
 
     <meta charset="utf-8">
@@ -27,11 +27,7 @@
 
     </script>
 
-    <!-- loads bootstrap css -->
-    <!--<link rel="stylesheet" href="/public/css/bootstrap/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.2/paper/bootstrap.min.css">
-    <!--<link rel="stylesheet"-->
-          <!--href="/public/css/bootstrap/css/bootstrap-theme.min.css">-->
 
     <!--animate.css-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css"/>
@@ -90,7 +86,7 @@
 
 <!--start of bottom nav-->
 <!--<div class="ng-cloak">-->
-    <!--<div bottom-qa-nav></div>-->
+<!--<div bottom-qa-nav></div>-->
 <!--</div>-->
 <!--end of bottom nav-->
 
@@ -125,7 +121,7 @@
 
 <!-- Bootstrap.js -->
 <script type="text/javascript"
-        src="/public/css/bootstrap/js/bootstrap.min.js"></script>
+        src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
 <!--angular loading bar js-->
 <script type="text/javascript"
