--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="clientHomeApp" ng-controller="MainController">
+<html lang="en" ng-app="adminHomeApp" ng-controller="MainController">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,7 +37,7 @@
 
     <!-- loads custom css file -->
     <link rel="stylesheet" href="/public/css/main.css">
-    <link rel="stylesheet" href="/public/css/client/client_home.css">
+    <link rel="stylesheet" href="/public/css/admin/admin_home.css">
 
     <title>Negus Math - College Level Advanced Mathematics for Kenya Students</title>
 </head>
@@ -284,13 +284,13 @@
         src="/bower_components/ngFx/dist/ngFx.min.js"></script>
 
 
-<script type="text/javascript" src="/public/angular_assets/clientHomeApp/clientHomeApp.js"></script>
-<script type="text/javascript" src="/public/angular_assets/clientHomeApp/directives.js"></script>
-<script type="text/javascript" src="/public/angular_assets/clientHomeApp/filters.js"></script>
-<script type="text/javascript" src="/public/angular_assets/clientHomeApp/controllers/mainCtrl.js"></script>
-<script type="text/javascript" src="/public/angular_assets/clientHomeApp/services/socketIoService.js"></script>
-<script type="text/javascript" src="/public/angular_assets/clientHomeApp/services/mainFactory.js"></script>
-<script type="text/javascript" src="/public/angular_assets/clientHomeApp/services/globals.js"></script>
+<script type="text/javascript" src="/public/angular_assets/adminHomeApp/adminHomeApp.js"></script>
+<script type="text/javascript" src="/public/angular_assets/adminHomeApp/directives.js"></script>
+<script type="text/javascript" src="/public/angular_assets/adminHomeApp/filters.js"></script>
+<script type="text/javascript" src="/public/angular_assets/adminHomeApp/controllers/mainCtrl.js"></script>
+<script type="text/javascript" src="/public/angular_assets/adminHomeApp/services/socketIoService.js"></script>
+<script type="text/javascript" src="/public/angular_assets/adminHomeApp/services/mainFactory.js"></script>
+<script type="text/javascript" src="/public/angular_assets/adminHomeApp/services/globals.js"></script>
 
 </body>
 </html>
