--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -121,7 +121,7 @@
                 </div>
                 <div ng-if="clientIsRegistered"
                      class="ng-cloak">
-                    <a href="/clientHome.html"
+                    <a href="/adminHome.html"
                        class="btn btn-xl">Continue to the forums
                     </a>
                 </div>
